--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
 <hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h2> GitHub's Santana's Repos </h2>
+
+<table border="1">
+  <tr>
+    <th> ID </th>
+    <th> LINK </th>
+  </tr>
+</table>
+<hr/>
+
+<h2> BitCoin $ &nbsp; <button> Atualizar </button> </h2>
+
+<table border="1">
+  <tr>
+    <th> Data/Hora </th>
+    <th> USD </th>
+    <th> BRL </th>
+  </tr>
+</table>
