--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 </table>
 <hr/>
 
-<h2> BitCoin $ &nbsp; <button> Atualizar </button> </h2>
+<h2> BitCoin $ &nbsp; <button (click)=> Atualizar </button> </h2>
 
 <table border="1">
   <tr>
