--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,7 @@
     <th> USD </th>
     <th> BRL </th>
   </tr>
+  <tr *ngFor="let rate of this.bitcoinService.list">
+    <td></td>
+  </tr>
 </table>
