--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
     <th> BRL </th>
   </tr>
   <tr *ngFor="let rate of this.bitcoinService.list">
-    <td></td>
+    <td> {{ rate.time.updated }} </td>
+    <td> {{ rate.bpi.USD.rate_float }} </td>
+    <td> {{ rate.bpi.BRL.rate_float }} </td>
   </tr>
 </table>
