--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
 
 <h2> BitCoin $ &nbsp; <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
 
+<h5> Timer </h5>
+{{ timer.getCount() }}s
+
 <table border="1">
   <tr>
     <th> Data/Hora </th>
