--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 <h2> BitCoin $ &nbsp; <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
 
 <h5> Timer </h5>
-{{ timer.getCount() }}s
+{{ counter , formatTime }}s
 
 <table border="1">
   <tr>
