--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
 <hr/>
 
 <h2> BitCoin $ &nbsp; <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
-
+<h5> For an update, you must await for </h5>
+{{ countDownTimer }}
 
 <table border="1">
   <tr>
