--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
 <h2> BitCoin $ &nbsp; <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
 <p> 
-  <strong> Countdown: </strong> {{ timer.getCounter() }}s
+  <strong> Countdown: </strong> {{ timer.getCounter() }}
 </p>
 
 <table border="1">
