--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,11 @@
 </table>
 <hr/>
 
-<h2> BitCoin $ &nbsp; <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
+<h2> BitCoin $ &nbsp; 
+  <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
 <p> 
   <strong> Countdown: </strong> 
-  {{ timer.getCounter() }}
+  {{ timer.getCounter() }}s
 </p>
 
 <table border="1">
