--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <hello name="{{ name }}"></hello>
-<h3> Thaylla de Santana | RA: 0050832011031 </h3>
+<h3> Thaylla de Santana || RA: 0050832011031 </h3>
 
 <table border="1">
   <tr>
