--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <td> {{ repo.id }} </td>
     <td> {{ repo.full_name }} </td>
   </tr>
-</table>
+</table><br>
 <hr/>
 
 <h2> BitCoin $ &nbsp; 
