--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
 <p> 
   <strong> Countdown: </strong> 
-  {{ timer.getTimer() }}s
+  {{ bitcoinService.getTimer() }}s
 </p>
 
 <table border="1">
