--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,36 @@
 <hello name="{{ name }}"></hello>
-<h3> Thaylla de Santana || RA: 0050832011031 </h3>
+<h3>Thaylla de Santana || RA: 0050832011031</h3>
 
 <table border="1">
   <tr>
-    <th> ID </th>
-    <th> LINK </th>
+    <th>ID</th>
+    <th>LINK</th>
   </tr>
   <tr *ngFor="let repo of gitHubService.repos">
-    <td> {{ repo.id }} </td>
-    <td> {{ repo.full_name }} </td>
+    <td>{{ repo.id }}</td>
+    <td>{{ repo.full_name }}</td>
   </tr>
-</table><br>
-<hr/>
+</table>
+<br />
+<hr />
 
-<h2> BitCoin $ &nbsp; 
-  <button (click)="updateBitcoinRates()"> Atualizar </button> </h2>
-<p> 
-  <strong> Countdown: </strong> 
+<h2>
+  BitCoin $ &nbsp; <button (click)="updateBitcoinRates()">Atualizar</button>
+</h2>
+<p>
+  <strong> Countdown: </strong>
   {{ bitcoinService.getTimer() }}s
 </p>
 
 <table border="1">
   <tr>
-    <th> Data/Hora </th>
-    <th> USD </th>
-    <th> BRL </th>
+    <th>Data/Hora</th>
+    <th>USD</th>
+    <th>BRL</th>
   </tr>
   <tr *ngFor="let rate of this.bitcoinService.list">
-    <td> {{ rate.time.updated }} </td>
-    <td> {{ rate.bpi.USD.rate_float }} </td>
-    <td> {{ rate.bpi.BRL.rate_float }} </td>
+    <td>{{ rate.time.updated }}</td>
+    <td>{{ rate.bpi.USD.rate_float }}</td>
+    <td>{{ rate.bpi.BRL.rate_float }}</td>
   </tr>
 </table>
